--- a/iOS-text-chat/TextChatSample/TextChatKit/TextChatView.xib
+++ b/iOS-text-chat/TextChatSample/TextChatKit/TextChatView.xib
@@ -16,19 +16,13 @@
                     <rect key="frame" x="0.0" y="550" width="600" height="50"/>
                     <subviews>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type message" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lMY-oW-XdU">
-                            <rect key="frame" x="8" y="8" width="480" height="34"/>
-                            <constraints>
-                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="34" id="yuY-cc-Arc"/>
-                            </constraints>
+                            <rect key="frame" x="8" y="7" width="480" height="35"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lcY-dh-e4I">
-                            <rect key="frame" x="496" y="8" width="96" height="34"/>
+                            <rect key="frame" x="496" y="7.5" width="96" height="35"/>
                             <color key="backgroundColor" red="0.34509803919999998" green="0.6705882353" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="34" id="vKU-1G-T2W"/>
-                            </constraints>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="19"/>
                             <state key="normal" title="Send">
                                 <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -44,26 +38,19 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="lMY-oW-XdU" firstAttribute="leading" secondItem="sMg-0x-Pl4" secondAttribute="leading" constant="8" id="AZn-O9-BIH"/>
-                        <constraint firstAttribute="bottom" secondItem="lMY-oW-XdU" secondAttribute="bottom" constant="8" id="BN0-fx-4Xl"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="50" id="ExH-oG-bpy"/>
+                        <constraint firstItem="lcY-dh-e4I" firstAttribute="centerY" secondItem="sMg-0x-Pl4" secondAttribute="centerY" id="TTk-DA-aya"/>
                         <constraint firstItem="lcY-dh-e4I" firstAttribute="leading" secondItem="lMY-oW-XdU" secondAttribute="trailing" constant="8" id="VTw-Uy-yIp"/>
-                        <constraint firstItem="lMY-oW-XdU" firstAttribute="top" secondItem="sMg-0x-Pl4" secondAttribute="top" constant="8" id="i9A-P4-jgA"/>
-                        <constraint firstItem="lcY-dh-e4I" firstAttribute="top" secondItem="sMg-0x-Pl4" secondAttribute="top" constant="8" id="ieV-1c-mhP"/>
+                        <constraint firstItem="lcY-dh-e4I" firstAttribute="height" secondItem="sMg-0x-Pl4" secondAttribute="height" multiplier="0.7" id="a80-sA-Idr"/>
+                        <constraint firstItem="lMY-oW-XdU" firstAttribute="centerY" secondItem="sMg-0x-Pl4" secondAttribute="centerY" id="dah-zz-y2R"/>
+                        <constraint firstItem="lMY-oW-XdU" firstAttribute="height" secondItem="sMg-0x-Pl4" secondAttribute="height" multiplier="0.7" id="hkI-Xl-iNV"/>
                         <constraint firstAttribute="trailing" secondItem="lcY-dh-e4I" secondAttribute="trailing" constant="8" id="uNi-fP-xOY"/>
-                        <constraint firstAttribute="bottom" secondItem="lcY-dh-e4I" secondAttribute="bottom" constant="8" id="uso-i3-cuO"/>
                         <constraint firstItem="lMY-oW-XdU" firstAttribute="width" secondItem="sMg-0x-Pl4" secondAttribute="width" multiplier="0.8" id="vre-3I-dtp"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d14-QU-ZHB">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o0Y-DI-2dJ">
-                            <rect key="frame" x="523" y="8" width="26" height="28"/>
-                            <state key="normal" image="minimize"/>
-                            <connections>
-                                <action selector="minimizeView:" destination="iN0-l3-epB" eventType="touchUpInside" id="QD7-Px-dWj"/>
-                            </connections>
-                        </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rt0-vx-EzT" userLabel="topNavBarTitle">
                             <rect key="frame" x="120" y="9" width="360" height="26"/>
                             <constraints>
@@ -78,6 +65,13 @@
                             <state key="normal" image="close_x_white"/>
                             <connections>
                                 <action selector="closeButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="arQ-2O-yqV"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o0Y-DI-2dJ">
+                            <rect key="frame" x="523" y="8" width="26" height="28"/>
+                            <state key="normal" image="minimize"/>
+                            <connections>
+                                <action selector="minimizeView:" destination="iN0-l3-epB" eventType="touchUpInside" id="QD7-Px-dWj"/>
                             </connections>
                         </button>
                     </subviews>
@@ -134,9 +128,7 @@
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="closeButton" destination="OFm-Hr-FhA" id="OlS-LN-eY9"/>
                 <outlet property="errorMessage" destination="sda-ij-nTc" id="2P3-R6-HnH"/>
-                <outlet property="minimizeButton" destination="o0Y-DI-2dJ" id="zQI-Mk-4lp"/>
                 <outlet property="sendButton" destination="lcY-dh-e4I" id="Dxg-bH-j1O"/>
                 <outlet property="tableView" destination="vkl-Dd-Rd9" id="4V5-1Y-hag"/>
                 <outlet property="textChatInputView" destination="sMg-0x-Pl4" id="El9-Y4-8zP"/>
