--- a/iOS-text-chat/TextChatSample/TextChatSample/Base.lproj/Main.storyboard
+++ b/iOS-text-chat/TextChatSample/TextChatSample/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -41,10 +41,24 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7rq-Gk-g8S">
                                 <rect key="frame" x="254" y="361" width="93" height="30"/>
                                 <state key="normal" title="ConnectToAV"/>
+                                <connections>
+                                    <action selector="connectToAVButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i7N-nb-1pQ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bfi-XK-9US">
+                                <rect key="frame" x="254" y="154" width="93" height="30"/>
+                                <state key="normal" title="ConnectToTC"/>
+                                <connections>
+                                    <action selector="connectToAVButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ovk-7o-84e"/>
+                                    <action selector="connectToTextChatButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TD8-7Q-iaD"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YFy-O3-XgP">
                                 <rect key="frame" x="244" y="399" width="112" height="30"/>
                                 <state key="normal" title="DisconnectToAV"/>
+                                <connections>
+                                    <action selector="disconnectToAVButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iaf-PG-qMN"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KQR-nt-S6F">
                                 <rect key="frame" x="258" y="40" width="84" height="30"/>
@@ -67,11 +81,22 @@
                                     <action selector="ChangeTopColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dLY-gC-hF1"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hi1-e9-1OS">
+                                <rect key="frame" x="244" y="192" width="112" height="30"/>
+                                <state key="normal" title="DisconnectToTC"/>
+                                <connections>
+                                    <action selector="disconnectToAVButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LM8-9h-Fxx"/>
+                                    <action selector="disconnectToTextChatButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7I3-7c-PNo"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Bfi-XK-9US" firstAttribute="top" secondItem="xL2-a5-rqW" secondAttribute="bottom" constant="8" id="3NX-Lj-2yV"/>
+                            <constraint firstItem="Bfi-XK-9US" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4kd-ko-hVF"/>
                             <constraint firstItem="s0b-YL-6Bk" firstAttribute="top" secondItem="KQR-nt-S6F" secondAttribute="bottom" constant="8" id="8nq-q5-xgc"/>
                             <constraint firstItem="YFy-O3-XgP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Cpy-0F-RHO"/>
+                            <constraint firstItem="hi1-e9-1OS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DPQ-g6-4Z8"/>
                             <constraint firstItem="KQR-nt-S6F" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="EgV-12-FJs"/>
                             <constraint firstItem="xL2-a5-rqW" firstAttribute="leading" secondItem="KQR-nt-S6F" secondAttribute="leading" id="FpH-Ze-ajW"/>
                             <constraint firstItem="7rq-Gk-g8S" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GsE-Nl-JLw"/>
@@ -80,6 +105,7 @@
                             <constraint firstItem="2iv-TL-hzU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Txx-VD-CO2"/>
                             <constraint firstItem="Ix5-QP-Vov" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="WMv-R2-eL8"/>
                             <constraint firstItem="xL2-a5-rqW" firstAttribute="top" secondItem="s0b-YL-6Bk" secondAttribute="bottom" constant="8" symbolic="YES" id="bf5-sQ-JLP"/>
+                            <constraint firstItem="hi1-e9-1OS" firstAttribute="top" secondItem="Bfi-XK-9US" secondAttribute="bottom" constant="8" id="cdD-0S-mhZ"/>
                             <constraint firstAttribute="trailing" secondItem="Ix5-QP-Vov" secondAttribute="trailing" id="dhv-w8-A0N"/>
                             <constraint firstItem="YFy-O3-XgP" firstAttribute="top" secondItem="7rq-Gk-g8S" secondAttribute="bottom" constant="8" id="esP-97-o1V"/>
                             <constraint firstItem="xL2-a5-rqW" firstAttribute="leading" secondItem="s0b-YL-6Bk" secondAttribute="leading" id="h1Z-Ni-Knd"/>
