--- a/js-screensharing-annotation/sample-app/public/css/styles.css
+++ b/js-screensharing-annotation/sample-app/public/css/styles.css
@@ -18,23 +18,6 @@ button {
     display: none;
 }
 
-.aspectRatio {
-  position: relative;
-}
-.aspectRatio:before {
-  display: block;
-  content: "";
-  width: 100%;
-  padding-top: 56.25%;
-}
-.aspectRatio > .content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
 .main-container {
     position: relative;
     width: 90vw;
@@ -46,10 +29,31 @@ button {
     padding: 15px;
 }
 
+/*Easy since we're using vw/vh*/
+.aspect-ratio {
+  height: 54vw;
+  min-width: 600px;
+  min-height: 360px;
+  padding: 0;
+}
+
+.aspect-ratio > .video-container {
+    position: absolute;
+}
+
 .video-container {
     position: relative;
     width: 100%;
     height: 100%;
+}
+
+.shared-screen {
+    width: 100%;
+    height: 100%;
+}
+
+.shared-screen canvas {
+    top: 0;
 }
 
 .mask {
@@ -295,4 +299,48 @@ button {
     background-image: url("../images/icon/screenshare-large@2x.png");
     background-size: 60px 41px;
   }
+}
+
+
+/*Annotation Styles*/
+.annotation-toolbar-container {
+  position: fixed;
+  top: 125px;
+  right: 0;
+  width: 40px;
+  z-index: 1000;
+}
+.annotation-toolbar-container > div input {
+  display: block;
+  top: 0 !important;
+  transform: none !important;
+}
+.annotation-toolbar-container > div input#OT_colors {
+  width: 30px;
+  margin-right: 5px !important;
+  margin-left: 5px !important;
+  padding: 0;
+}
+.annotation-toolbar-container > div .OT_subpanel,
+.annotation-toolbar-container > div .color-picker {
+  position: absolute;
+  top: 0;
+  right: 40px;
+  padding-left: 0 !important;
+}
+.annotation-toolbar-container > div .OT_subpanel {
+  left: -40px;
+  overflow: hidden;
+}
+.annotation-toolbar-container > div .OT_subpanel > div {
+  top: 0 !important;
+  transform: none !important;
+}
+.annotation-toolbar-container > div .color-picker {
+  left: -30px;
+}
+.annotation-toolbar-container > div .color-picker .color-choice {
+  display: block !important;
+  height: 20px !important;
+  width: 20px !important;
 }
