--- a/js-screensharing-annotation/sample-app/public/templates/screenshare.html
+++ b/js-screensharing-annotation/sample-app/public/templates/screenshare.html
@@ -125,6 +125,11 @@
         height: 100%;
         width: 100%;
     }
+    
+    .OT_edge-bar-item {
+      display: none;
+    }
+    
 </style>
 </head>
 <body>
