add example of static, scrollable and zoomable content

--- a/iOS/ScreenShareSample/ScreenShareSample/Base.lproj/Main.storyboard
+++ b/iOS/ScreenShareSample/ScreenShareSample/Base.lproj/Main.storyboard
@@ -16,12 +16,35 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MkI-wv-5LV">
+                                <rect key="frame" x="238" y="8" width="125" height="30"/>
+                                <state key="normal" title="Change Scrollable"/>
+                                <connections>
+                                    <action selector="changeScrollable:" destination="BYZ-38-t0r" eventType="touchUpInside" id="O2C-R8-xbh"/>
+                                </connections>
+                            </button>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aQI-xY-pul">
+                                <rect key="frame" x="0.0" y="38" width="600" height="562"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MkI-wv-5LV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HR5-9a-P1b"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="aQI-xY-pul" secondAttribute="bottom" id="VG3-Ku-u4I"/>
+                            <constraint firstAttribute="trailing" secondItem="aQI-xY-pul" secondAttribute="trailing" id="h6J-Ps-2m1"/>
+                            <constraint firstItem="aQI-xY-pul" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="lzA-O6-0mO"/>
+                            <constraint firstItem="aQI-xY-pul" firstAttribute="top" secondItem="MkI-wv-5LV" secondAttribute="bottom" id="mWI-w3-wle"/>
+                            <constraint firstItem="MkI-wv-5LV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="8" id="pvd-pp-Zb1"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="aQI-xY-pul" id="ilT-DX-WST"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="179" y="369"/>
+            <point key="canvasLocation" x="340" y="356"/>
         </scene>
     </scenes>
 </document>
