simplify usage of drawing by hiding scroll view

--- a/iOS/ScreenShareSample/ScreenShareSample/Base.lproj/Main.storyboard
+++ b/iOS/ScreenShareSample/ScreenShareSample/Base.lproj/Main.storyboard
@@ -24,22 +24,23 @@
                                     <action selector="changeScrollable:" destination="BYZ-38-t0r" eventType="touchUpInside" id="O2C-R8-xbh"/>
                                 </connections>
                             </button>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aQI-xY-pul">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ke-AN-pdp" customClass="ScreenShareView">
                                 <rect key="frame" x="0.0" y="38" width="600" height="562"/>
-                            </scrollView>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="3Ke-AN-pdp" secondAttribute="trailing" id="32H-o8-B70"/>
+                            <constraint firstItem="3Ke-AN-pdp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="FRU-Nt-O0m"/>
                             <constraint firstItem="MkI-wv-5LV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="HR5-9a-P1b"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="aQI-xY-pul" secondAttribute="bottom" id="VG3-Ku-u4I"/>
-                            <constraint firstAttribute="trailing" secondItem="aQI-xY-pul" secondAttribute="trailing" id="h6J-Ps-2m1"/>
-                            <constraint firstItem="aQI-xY-pul" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="lzA-O6-0mO"/>
-                            <constraint firstItem="aQI-xY-pul" firstAttribute="top" secondItem="MkI-wv-5LV" secondAttribute="bottom" id="mWI-w3-wle"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="3Ke-AN-pdp" secondAttribute="bottom" id="ZGC-1T-WyE"/>
+                            <constraint firstItem="3Ke-AN-pdp" firstAttribute="top" secondItem="MkI-wv-5LV" secondAttribute="bottom" id="hBv-9m-MTp"/>
                             <constraint firstItem="MkI-wv-5LV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="8" id="pvd-pp-Zb1"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="scrollView" destination="aQI-xY-pul" id="ilT-DX-WST"/>
+                        <outlet property="shareView" destination="3Ke-AN-pdp" id="9EH-hJ-2yN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
