fix WMS282: Text Chat Accelerator toolbar UI inconsistent

--- a/iOS-text-chat/OneToOneTextChatSample/SampleApp/Base.lproj/Main.storyboard
+++ b/iOS-text-chat/OneToOneTextChatSample/SampleApp/Base.lproj/Main.storyboard
@@ -72,7 +72,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="3hz-UV-DgS" secondAttribute="bottom" id="E8n-tc-WBC"/>
                                     <constraint firstAttribute="height" constant="66" id="Q9T-ag-Vpj"/>
